Bug 70835 - 2.99.905 segfaults when switching to custom modeline resolution
Summary: 2.99.905 segfaults when switching to custom modeline resolution
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 70946 71003 71232 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-24 10:36 UTC by Jay Little
Modified: 2013-11-04 20:56 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
XOrg log - contains details of the crash after I switch resolutions (20.14 KB, text/plain)
2013-10-24 10:36 UTC, Jay Little
no flags Details

Description Jay Little 2013-10-24 10:36:14 UTC
Created attachment 88074 [details]
XOrg log - contains details of the crash after I switch resolutions

The new 2.99.905 snapshot intel driver from git crashes on me whenever I attempt to switch to a resolution created via a custom modeline on my System 76 gazp9 laptop.  My modelines are specified via an xorg.conf file:

Modeline "1600x900"  119.00  1600 1696 1864 2128  900 901 904 932  -HSync +Vsync
Modeline "1440x900"  106.50  1440 1528 1672 1904  900 903 909 934 -hsync +vsync
Modeline "1368x768"   85.25  1368 1440 1576 1784  768 771 781 798 -hsync +vsync
Modeline "1280x1024"  109.00  1280 1368 1496 1712  1024 1027 1034 1063 -hsync +vsync
Modeline "1280x720"   74.50  1280 1344 1472 1664  720 723 728 748 -hsync +vsync
Modeline "1024x640"   52.25  1024 1072 1168 1312  640 643 649 665 -hsync +vsync

When I log in with 2.99.905 (GDM is always configured to use the system's native resolution) and my cinnamon session is configured to use the native resolution of the LCD, everything works fine.  Until I try to switch to a resolution like 1600x900.  Then X crashes and produces the output at the end of the attached log file.

Prior to trying 2.99.905 I was using this commit:

http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/commit/?id=db086d02affe5109202dc9ee06c9e728a3ff0f3f

That version worked fine.  Now I haven't tried all the commit versions, but it doesn't work when I try this one:

http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/commit/?id=d788b69fdb5ea73b1d283a89e53b2b19eaa90e6e

So that narrows down to around 10 different commits.

Thanks in advance for the assistance.  Also let me take this opportunity to say how much I appreciate the team's work on this driver.  The Haswell implementation has really come a long way and your efforts thus far have been most appreciated!
Comment 1 Chris Wilson 2013-10-24 12:07:14 UTC
commit 8e44b1f5543f6d36c33c743f1ba2143514f8afbf
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Oct 24 13:05:16 2013 +0100

    sna: Fix canonical mode name to correctly use asprintf
    
    Whoops. Only the kernel sprintf() accepts NULL as a valid target string,
    not libc's.
    
    Reported-by: Jay Little <jaylittle@jaylittle.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=70835
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Jay Little 2013-10-24 12:28:20 UTC
That definitely fixed the issue.  Thanks a lot Chris!
Comment 3 Chris Wilson 2013-10-28 08:01:05 UTC
*** Bug 70946 has been marked as a duplicate of this bug. ***
Comment 4 Rui Tiago Matos 2013-10-29 15:46:51 UTC
*** Bug 71003 has been marked as a duplicate of this bug. ***
Comment 5 Chris Wilson 2013-11-04 20:56:22 UTC
*** Bug 71232 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.